schema/testdata/errors/operation_where_too_many_arguments.keel
model Profile {
    fields {
        identity Identity @unique
        username Text @unique
    }

    actions {
        get getProfile(username) {
            @where(
                profile.identity == ctx.identity,
                //expect-error:17:45:AttributeArgumentError:unexpected argument for @where
                profile.username == "adaam2"
            )
        }
    }
}
